# ESP32-Zigbee-Bridge

./: .clangd  .gitignore  ARCHITECTURE_VISUAL.md  Agents.md  Makefile  README.md  STATUS.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/agents/: copilot-instructions.md
.github/prompts/: 00_context_and_guardrails.yaml  10_zigbee_adapter_contract.yaml  60_device_quirks_table.yaml  70_integration_questions_and_assumptions.yaml  Project-status-tracking.yaml  project-plan-extension.yaml
.specify/scripts/bash/: sync-branches.sh
adapters/: CMakeLists.txt
adapters/include/: mqtt_adapter.h
adapters/src/: mqtt_adapter.c
apps/: CMakeLists.txt
apps/src/: app_blink.c  app_blink.h
docs/: README.md
docs/spec/: 20_trace_harness_record_replay.yaml  30_instrumentation_starvation_backpressure.yaml  40_persistence_schema_evolution.yaml  50_home_assistant_discovery_T080.yaml  README.yaml  project-plan.yaml
drivers/: CMakeLists.txt
drivers/gpio_button/: gpio_button.c  gpio_button.h
drivers/i2c_sensor/: i2c_sensor.c  i2c_sensor.h
drivers/zigbee/: zb_adapter.h  zb_callback.c  zb_cmd.c  zb_fake.c  zb_internal.h  zb_real.c  zb_real_internal.h  zb_shell.c
main/: CMakeLists.txt  idf_component.yml
main/src/: main.c
os/: CMakeLists.txt
os/include/: os.h  os_config.h  os_console.h  os_event.h  os_fibre.h  os_log.h  os_persist.h  os_shell.h  os_types.h
os/src/: os.c  os_console.c  os_event.c  os_fibre.c  os_log.c  os_persist.c  os_shell.c
services/: CMakeLists.txt
services/ha_disc/: ha_disc.c  ha_disc.h
services/include/: capability.h  interview.h  reg_types.h  registry.h
services/local_node/: local_node.c  local_node.h
services/src/: capability.c  ha_disc.c  interview.c  quirks.c  reg_shell.c  registry.c
specs/001-real-zigbee-adapter/: data-model.md  plan.md  pr-fixes.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-real-zigbee-adapter/checklists/: requirements.md
specs/001-real-zigbee-adapter/contracts/: zb_adapter_contract.md
specs/002-wifi-connectivity/: spec.md
specs/002-wifi-connectivity/checklists/: requirements.md
specs/003-shell-uart-input/: spec.md
specs/003-shell-uart-input/checklists/: requirements.md
tests/unit/: test_ha_disc.c  test_ha_disc.h  test_local_node.c  test_local_node.h  test_os.c  test_support.h  test_zb_adapter.c  test_zb_adapter.h
